[package]
name = "tools"
homepage.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
data = { path = "../../src/data" }
util = { path = "../../src/util" }
platform = { path = "../../src/platform" }
engine = { path = "../../src/engine" }
dialoguer = "0.11.0"
inquire = "0.6"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "derive", "macros" ] }

[dependencies.windows-core]
version = "0.59"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_Variant",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Com_StructuredStorage", 
    "Win32_UI_Accessibility",
    "UI_UIAutomation",
]

[[bin]]
name = "dim"
path = "src/bin/dim.rs" 

[[bin]]
name = "browser"
path = "src/bin/browser.rs" 

[[bin]]
name = "kill"
path = "src/bin/kill.rs" 

[[bin]]
name = "tab_switch"
path = "src/bin/tab_switch.rs"

[[bin]]
name = "merge_apps"
path = "src/bin/merge_apps.rs" 
