[package]
name = "data"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
log = "0.4.22"
serde = "1.0.217"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "derive", "macros" ] }
util = { path = "../util" }

[dev-dependencies]
chrono = "0.4"
