[package]
name = "engine"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "exports"
path = "src/exports.rs"
crate-type = ["cdylib"]

[dependencies]
tonic = "0.3"
prost = "0.6"

rusqlite = { version = "0.24",features = ["trace", "blob", "bundled"] }

native = { path = "../native" }
util = { path = "../util" }

[build-dependencies]
tonic-build = "0.3"