[package]
name = "engine"
homepage.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data = { path = "../data" }
platform = { path = "../platform" }
util = { path = "../util" }
scoped-futures = "0.1.4"
