[package]
name = "engine_windows_bindings"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.6.0"

[build-dependencies]
windows = "0.6.0"