[package]
name = "native"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["everything", "impl-default", "impl-debug"] }
ntapi = { version = "0.3", features = ["user", "impl-default"] }
uuid-sys = "0.1"
pelite = "0.9"
image = "0.23"
winrt = { git = "https://github.com/microsoft/winrt-rs", rev = "a3eae9e1454de33e6ea55389bd0eb59fd587ee96" }

util = { path = "../util" }

[build-dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs", rev = "a3eae9e1454de33e6ea55389bd0eb59fd587ee96" }

[dev-dependencies]
tokio-test = "0.3"

[package.metadata.winrt.dependencies]
"Microsoft.Windows.SDK.Contracts" = "10.0.19041.1"