[package]
name = "native"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["everything", "impl-default", "impl-debug"] }
ntapi = { version = "0.3", features = ["user", "impl-default"] }
uuid-sys = "0.1"
pelite = "0.9"
image = "0.23"
winrt = { git = "https://github.com/microsoft/winrt-rs", rev = "8dff55c01b5d049d92b7c4408a4fb0359eeb9fb8" }

util = { path = "../util" }

[build-dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs", rev = "8dff55c01b5d049d92b7c4408a4fb0359eeb9fb8" }

[dev-dependencies]
tokio-test = "0.3"

[package.metadata.winrt.dependencies]
"Microsoft.Windows.SDK.Contracts" = "10.0.19041.1"