[package]
name = "platform"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

[dependencies.windows]
version = "0.56"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_StationsAndDesktops",
    "Wdk_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_WinRT",
    "Win32_System_Time",

    "Foundation",
    "Foundation_Collections",
    "Storage",
    "Storage_Streams",
    "Storage_FileProperties",
    "ApplicationModel",
    "UI_Notifications",
    "Data_Xml_Dom",
]