[package]
name = "platform"
homepage.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.1"
reqwest = "0.12.15"
scraper = "0.23.1"
url = "2.5.4"
util = { path = "../util" }
mime2ext = "0.1.52"
infer = "0.15.0"
semver = "1.0.26"

[dependencies.windows-core]
version = "0.59"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_StationsAndDesktops",
    "Wdk_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_WinRT",
    "Win32_System_Time",
    "Win32_Graphics_Gdi",
    "Win32_System_RemoteDesktop",
    "Win32_System_Power",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Win32_System_Variant",
    "Win32_Storage_Packaging_Appx",

    "Foundation",
    "Foundation_Collections",
    "Storage",
    "Storage_Streams",
    "Storage_FileProperties",
    "ApplicationModel",
    "System",
    "UI_Notifications",
    "Data_Xml_Dom",
]
