[package]
name = "util"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt"] }
tracing-futures = "0.2"
anyhow = "1.0"
flume = "0.10"