[package]
name = "util"
homepage.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
figment = { version = "0.10", features = ["json"] }
flume = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2.3"
tokio = { version = "1.42", features = ["macros", "rt"] }
dirs = "6.0.0"
