[package]
name = "util"
homepage.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
flume = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2.3"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
dirs = "6.0.0"
serde_json = "1.0.140"
backon = "1.5.1"
noisy_float = { version = "0.2.0", features = ["serde"] }
