[package]
name = "integration_tests"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../../src/engine" }
native = { path = "../../src/native" }
