[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing = "0.1"
color-eyre = "0.6"
config = { version = "0.13", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
