[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "derive", "macros" ] }
util = { path = "../util" }
