[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }
common = { path = "../common" }
data = { path = "../data" }
platform = { path = "../platform" }