[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data = { path = "../data" }
platform = { path = "../platform" }
rand = { version = "0.8.5", features = ["std_rng"] }
scoped-futures = "0.1.4"
util = { path = "../util" }
