[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.43.0"
features = [
    "implement",

    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_Storage_EnhancedStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_Storage_FileSystem",

    "Foundation",
    "Storage",
    "Storage_Streams",
    "Storage_FileProperties",
    "ApplicationModel",
]

[dependencies]
utils = { path = "../utils" }
