[package]
name = "app"
homepage.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
default-run = "app"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "engine"
path = "src/bin/engine.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
data = { path = "../../data" }
engine = { path = "../../engine" }
platform = { path = "../../platform" }
util = { path = "../../util" }

tauri = { version = "2.5.3", features = [ "protocol-asset" ] }
tauri-plugin-opener = "2.2.5"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-updater = "2.5.3"
tauri-plugin-mcp-bridge = "0.7"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

