[package]
name = "monitor"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.1", features = ["image"] }
anyhow = "1.0"
image = "0.23"

native = { path = "../../../src/native" }